--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
+    "posthog-js": "^1.215.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
