--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^8.54.0",
     "framer-motion": "^12.4.1",
     "lucide-react": "^0.475.0",
     "next": "15.1.6",
